<resources>
    <string name="app_name">WalmartPOC</string>
    <string name="fragment_home_title">Walmart</string>
    <string name="fragment_detail_title">Item Details</string>
    <string name="in_stock">In Stock</string>
    <string name="out_stock">Out of Stock</string>
    <string name="loading">Loading ....</string>
    <string name="ratting">(3.5)</string>
    <string name="ratting_counts">4 ratings</string>
    <string name="short_desc">Resolution: 4K Ultra HD Refresh Rate: 60Hz w/ 120 Clear Motion Rate HDMI Inputs: Class 1080p LED HDTV - LE43A509</string>
    <string name="price">$190</string>
    <string name="product_title">Samsung 50\" Class 4K Ultra HD LED Smart TV"</string>
    <string name="sort">Sort</string>
    <string name="open_settings">Tap here to open settings.</string>
    <string name="fragment_item_detail">Item Detail</string>

V
    <string name="sort_price_low_to_high">Price: Low to High</string>
    <string name="sort_price_high_to_low">Price: High to Low</string>
    <string name="sort_top_rated">Top Rated</string>

    <string name="work_in_progress">Work in progress!!!</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="view_more">View more</string>

    <string name="no_rating_yet">not rated yet</string>
    <string name="one_rating">1 ratting</string>
    <string name="rating">ratings</string>

    <string name="zero_dollar">--</string>

    <string name="network_error">Please switch on your network connection. We will connect you back.</string>
    <string name="bussiness_error">Sorry!!! Something went wrong please try later</string>
</resources>
