<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/price_low_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_price_low_to_high" />

        <RadioButton
            android:id="@+id/price_high_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_price_high_to_low" />

        <RadioButton
            android:id="@+id/top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_top_rated" />

    </RadioGroup>
    a

</RelativeLayout>