<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:background="@color/white"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height">

        <com.estore.walmart.views.AnimatedImageView xmlns:image="http://schemas.android.com/apk/res/com.estore.walmart"
            android:id="@+id/image_view"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            image:defaultImageId="@drawable/walmart_app_logo" />

        <TextView
            android:id="@+id/text_stock_status"
            style="@style/StockTextStyle"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view"
            android:background="@color/orange_red"
            android:text="@string/out_stock" />

        <TextView
            android:id="@+id/text_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_view"
            android:text="@string/product_title" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/RattingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/image_view"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/text_ratting"
            style="@style/BlueCardTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/rating_bar"
            android:text="@string/ratting" />

        <TextView
            android:id="@+id/text_price"
            style="@style/BlueCardTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingRight="5dp"
            android:text="@string/price" />
    </RelativeLayout>
</android.support.v7.widget.CardView>