<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/image_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/white"
            card_view:cardCornerRadius="4dp">

            <com.estore.walmart.views.AnimatedImageView xmlns:image="http://schemas.android.com/apk/res/com.estore.walmart"
                android:id="@+id/image_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_detail"
                android:scaleType="fitCenter"
                image:defaultImageId="@drawable/walmart_in_store_app" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_card_view"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/white"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_title"
                    style="@style/DetailTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_title"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/text_price"
                    style="@style/DetailPriceTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_title"
                    android:text="Price $190"
                    android:textSize="25sp" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/text_price"
                    android:layout_margin="10dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:id="@+id/layout_ratting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider1">

                    <android.support.v7.widget.AppCompatRatingBar
                        android:id="@+id/rating_bar"
                        style="@style/RattingBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:numStars="5"
                        android:rating="3.5" />

                    <TextView
                        android:id="@+id/text_ratting_count"
                        style="@style/RatingCountTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_bar"
                        android:paddingLeft="5dp"
                        android:text="@string/ratting_counts" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/text_ratting_count"
                        android:layout_margin="10dp"
                        android:background="@color/gray" />
                </RelativeLayout>

                <Button
                    android:id="@+id/button_add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_ratting"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/walmart_blue"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/light_gray" />

                <TextView
                    android:id="@+id/text_short_description"
                    style="@style/ShortDescTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_add_to_cart"
                    android:padding="5dp"
                    android:text="@string/short_desc" />

                <TextView
                    android:id="@+id/text_view_more"
                    style="@style/ShortDescTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_short_description"
                    android:padding="5dp"
                    android:text="@string/view_more"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>